adicionar lojas de lista

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-expand-lg cabecalho">
         <div class="container-fluid">
           <a class="navbar-brand" href="/"
-            ><img src="resources/img/E & L.png" alt="E & L"
+            ><img src="resources/img/carrousel/e-e-l.png" alt="E & L"
           /></a>
           <span
             class="navbar-toggler btn"
@@ -57,7 +57,7 @@
           <div
             class="carousel-item h-100 active"
             style="
-              background-image: url(resources/img/escolhido-1.png);
+              background-image: url(/resources/img/carrousel/escolhido-1.png);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -66,7 +66,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 1.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-1.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -75,7 +75,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 2.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-2.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -84,7 +84,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 3.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-3.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -93,7 +93,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 4.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-4.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -102,7 +102,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 5.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-5.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -111,7 +111,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 6.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-6.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -120,7 +120,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 7.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-7.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -129,7 +129,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 8.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-8.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -138,7 +138,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 9.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-9.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -147,7 +147,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 10.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-10.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -156,7 +156,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 11.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-11.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -165,7 +165,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 12.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-12.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -174,7 +174,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 12.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-13.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -183,7 +183,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 13.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-14.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -192,7 +192,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 15.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-15.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -201,7 +201,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 16.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-16.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -210,7 +210,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 17.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-17.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
@@ -219,7 +219,7 @@
           <div
             class="carousel-item h-100"
             style="
-              background-image: url(resources/img/ester\ e\ lucas\ 18.jpeg);
+              background-image: url(resources/img/carrousel/ester-e-lucas-18.jpeg);
               background-size: contain;
               background-repeat: no-repeat;
               background-position: center;
