--- a/pages/presentes/presentes.html
+++ b/pages/presentes/presentes.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg cabecalho">
           <div class="container-fluid">
             <a class="navbar-brand" href="/"
-              ><img src="/resources/img/E & L.png" alt="E & L"
+              ><img src="/resources/img/carrousel/e-e-l.png" alt="E & L"
             /></a>
             <span
               class="navbar-toggler btn"
@@ -47,6 +47,17 @@
           </div>
         </nav>
       </header>
-    
+      <div class="row">
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 lojas">
+            <nav>
+                <h3 class="text-center">Lista de lojas</h3>
+                <ul>
+                    <a href="https://www.camicado.com.br/lista/home?s_icid=Home_Menu_ListaDePresentes_20230131" target="_self"><li>Camicado</li></a>
+                    <a href="https://www.precolandia.com.br/lista-casamento" target="_self"><li>Preçolandia</li></a>
+                    <a href="https://lista.havan.com.br/" target="_self"><li>Havan</li></a>
+                    <a href="https://listas.casasbahia.com.br/" target="_self"><li>Casas Bahia</li></a>
+                </ul>
+            </nav>
+        </div>
 </body>
 </html>
