--- a/pages/local/local.html
+++ b/pages/local/local.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg cabecalho">
           <div class="container-fluid">
             <a class="navbar-brand" href="/"
-              ><img src="/resources/img/E & L.png" alt="E & L"
+              ><img src="/resources/img/carrousel/e-e-l.png" alt="E & L"
             /></a>
             <span
               class="navbar-toggler btn"
