Responsivo pagina principal

--- a/index.html
+++ b/index.html
@@ -228,20 +228,20 @@
         </div>
       </div>
 
-      <h2 id="bemvindo" class="sejabem-vindo">Seja Bem-vindo</h2>
-      <div class="seja-bem-vindo">
-        <p class="texto-seja-bem-vindo">
+
+
+      <div class="col-12 row">
+        <h2 class="col-12 text-center">Seja bem-vindo</h2>
+        <p class="col-12 texto-seja-bem-vindo text-center">
           Siim, vamos nos casar!!<br />
           Estamos muito felizes em compartilhar cada detalhe desse dia com
-          você!<br />
+          você!<br/>
           Por isso decidimos criar esse site com as informações importantes do
           nosso dia.
         </p>
-      </div>
 
-      <h2 id="abaInfo" class="informacoes">Algumas informações</h2>
-      <div class="algumas-informacoes">
-        <p class="texto-informacoes">
+        <h2 class="col-12 text-center">Informações</h2>
+        <p class="col-12 texto-seja-bem-vindo text-center">
           Antes de navegar no site, segue algumas informações.<br />
           Nosso casamento é dia 10/03/2024.<br />
           Para os padrinhos, no topo da página terá o seu acesso com informações
