--- a/pages/presentes/presentes.html
+++ b/pages/presentes/presentes.html
@@ -53,7 +53,7 @@
                 <h3 class="text-center">Lista de lojas</h3>
                 <ul>
                     <a href="https://www.camicado.com.br/lista/home?s_icid=Home_Menu_ListaDePresentes_20230131" target="_self"><li>Camicado</li></a>
-                    <a href="https://www.precolandia.com.br/lista-casamento" target="_self"><li>Preçolandia</li></a>
+                    <a href="https://www.precolandia.com.br/lista-casamento" target="_self"><li>Preolandia</li></a>
                     <a href="https://lista.havan.com.br/" target="_self"><li>Havan</li></a>
                     <a href="https://listas.casasbahia.com.br/" target="_self"><li>Casas Bahia</li></a>
                 </ul>
