--- a/index.html
+++ b/index.html
@@ -227,11 +227,8 @@
           ></div>
         </div>
       </div>
-
-
-
       <div class="col-12 row">
-        <h2 class="col-12 text-center">Seja bem-vindo</h2>
+        <h2 class="col-12 text-center"><u>Seja bem-vindo</u></h2>
         <p class="col-12 texto-seja-bem-vindo text-center">
           Siim, vamos nos casar!!<br />
           Estamos muito felizes em compartilhar cada detalhe desse dia com
@@ -240,7 +237,7 @@
           nosso dia.
         </p>
 
-        <h2 class="col-12 text-center">Informações</h2>
+        <h2 class="col-12 text-center"><u>Informações</u></h2>
         <p class="col-12 texto-seja-bem-vindo text-center">
           Antes de navegar no site, segue algumas informações.<br />
           Nosso casamento é dia 10/03/2024.<br />
