Alteração local + fornecedores

--- a/pages/local/local.html
+++ b/pages/local/local.html
@@ -40,6 +40,7 @@
                 <a href="#abaInfo" class="nav-link">Informações</a>
                 <a href="/pages/presentes/presentes.html" class="nav-link">Presentes</a>
                 <a href="/pages/padrinhos/padrinhos.html"class="nav-link">Padrinhos</a>
+                <a href="/pages/fornecedores/fornecedores.html" class="nav-link">Fornecedores</a>
                 <a href="/pages/local/local.html" class="nav-link">Local</a>
                 <a href="/pages/contatos/contatos.html" class="nav-link">Contatos</a>
               </div>
@@ -47,5 +48,68 @@
           </div>
         </nav>
       </header>
+        <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div
+            class="carousel-item h-100 active"
+            style="
+              background-image: url(/resources/img/espaco/logo-rosamel.jpg);
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-position: center;
+            "
+          ></div>
+          <div
+            class="carousel-item h-100"
+            style="
+              background-image: url(/resources/img/espaco/espaco-rosamel.jpg);
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-position: center;
+            "
+          ></div>
+          <div
+            class="carousel-item h-100"
+            style="
+              background-image: url(/resources/img/espaco/espaco-rosamel-2.jpg);
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-position: center;
+            "
+          ></div>
+          <div
+            class="carousel-item h-100"
+            style="
+              background-image: url(/resources/img/espaco/espaco-rosamel-3.jpeg);
+              background-size: contain;
+              background-repeat: no-repeat;
+              background-position: center;
+            "
+          ></div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row" >
+          <img class="col-sm-12 col-lg-5 col-xl-5" src="/resources/img/espaco/rota.jpeg" alt="Rota">
+          <h2 class="col-sm-12 col-lg-7 col-xl-7 text-center" style="margin-top: 70px;">Espaço Rosamel<br>
+            <p class="escrito">Rua Lindório Rocha,650<br> Santa Marta - Várzea Paulista</p>
+          </h2>
+        </div>
+      </div>
+
+    </main>
+      <footer>
+        <div class="foot">
+          <h2 class="ester-lucas">Ester e Lucas</h2>
+          <p class="data">10/03/2024</p>
+          <p class="feito-por-nos">
+            Feito com muito carinho pelos noivos (do zero)
+          </p>
+        </div>
+      </footer>   
 </body>
 </html>
