--- a/pages/padrinhos/padrinhos.html
+++ b/pages/padrinhos/padrinhos.html
@@ -40,6 +40,7 @@
                 <a href="#abaInfo" class="nav-link">Informações</a>
                 <a href="/pages/presentes/presentes.html" class="nav-link">Presentes</a>
                 <a href="/pages/padrinhos/padrinhos.html" class="nav-link">Padrinhos</a>
+                <a href="/pages/fornecedores/fornecedores.html" class="nav-link">Fornecedores</a>
                 <a href="/pages/local/local.html" class="nav-link">Local</a>
                 <a href="/pages/contatos/contatos.html" class="nav-link">Contatos</a>
               </div>
