--- a/pages/padrinhos/padrinhos.html
+++ b/pages/padrinhos/padrinhos.html
@@ -40,7 +40,6 @@
                 <a href="#abaInfo" class="nav-link">Informações</a>
                 <a href="/pages/presentes/presentes.html" class="nav-link">Presentes</a>
                 <a href="/pages/padrinhos/padrinhos.html" class="nav-link">Padrinhos</a>
-                <a href="/pages/fornecedores/fornecedores.html" class="nav-link">Fornecedores</a>
                 <a href="/pages/local/local.html" class="nav-link">Local</a>
                 <a href="/pages/contatos/contatos.html" class="nav-link">Contatos</a>
               </div>
@@ -48,5 +47,15 @@
           </div>
         </nav>
       </header>
+
+      <div class="row">
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 lojas">
+          <h3><u>Querido padrinho</u></h3>
+          <p class="text-center">Olá, que alegria ter você por aqui.<br>
+          Você foi escolhido a dedo, você é muito importante para nós!<br>
+          Separamos essa aba especialmente para vocês!</p>
+        </div>
+
+
 </body>
 </html>
